# study_C

./: .gitignore  CMakeLists.txt  README.md
basicIO/: main.cpp
include/: include.h
